# solpredict

./: README.md
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/.sqlx/: query-639f8a283817912340043761e1dcdc96701343c41c69c56f4e0f211d373e0504.json  query-650fde06a43f4935cf21632021308f59a1b989e10cebf7e9d33e41c043d19ecb.json  query-657efddbcab2c85775116f716ae646da62f4ead25bebbb9d57024bec65bb15f1.json  query-7ecc1bab0615bfac135738637f34babed1995f86b5ccdd1b0301531702b524d9.json  query-7fb0ba7cb8e63dd007bf95f057cd7eae9bf6e8d85195769d853f8c87e03ec2da.json  query-848c9187b24a0c095f05ad48b17dcc42c1fd7313eb81cf2eaf14a7b7bbcebac2.json  query-afe6e7b3b9ffc5397d578c6c53f0baba8f177f4b9da18d4ebd067830969266ed.json  query-c09b10631c32bab33d5912c396880c1774412c72818838678ce01c454193b00c.json  query-ca9b78a92debbfb517bb14996e57d6b3d2add166052b69ab91482efdf4cca829.json  query-cc9b8860f82a05300548a6c341afa847ab0694611cec23ff20ec5f8a78ffdb0f.json  query-ed75fd5dd1467277d279afcd35eb2a7a4b37b33e25fe3fbc1670bfbcc4654f6d.json  query-f8e73cdd3fe55502b6e0122682752b5fd25f3b56c9f5804cbd82a58d84755184.json  query-ff8c812177ee857cb4aed8a3be90e6072e5b31b9c93f3a1f876f9d531e536a5d.json
backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs  telemetry.rs
backend/src/ai/: client.rs  mod.rs  parse.rs
backend/src/db/: mod.rs
backend/src/handlers/: ai.rs  airdrop.rs  bets.rs  health.rs  leaderboard.rs  me.rs  metadata.rs  mod.rs  root.rs
backend/src/handlers/market/: claim.rs  confirm.rs  create.rs  get.rs  markets.rs  mod.rs  place_bet.rs  resolve.rs  types.rs
backend/src/handlers/market/ai/: ai_validate_result.rs  ai_validate_select.rs  ai_validate_start.rs  mod.rs
backend/src/handlers/profile/: bets.rs  mod.rs  profile.rs
backend/src/handlers/siws/: mod.rs  nonce.rs  verify.rs
backend/src/handlers/webhooks/: ai_propose.rs  helius.rs  mod.rs
backend/src/middleware/: auth.rs
backend/src/repo/: bet.rs  bets.rs  market.rs  mod.rs  points.rs  position.rs  profile.rs  users.rs
backend/src/routes/: mod.rs
backend/src/solana/: accounts.rs  admin.rs  anchor_client.rs  attestation.rs  betting.rs  context.rs  encoding.rs  market.rs  mod.rs  pda.rs  resolution.rs  transactions.rs
backend/src/types/: ix.rs  mod.rs
backend/src/usecases/: ai_jobs.rs  bets.rs  market_category.rs  mod.rs  perplexity.rs
backend/src/usecases/webhooks/: claim.rs  create_market.rs  mod.rs  place_bet.rs  resolve_market.rs  shared.rs
frontend/: .dockerignore  (+5 more)
onchain/programs/prediction_market/: Cargo.toml
onchain/programs/prediction_market/src/: constants.rs  errors.rs  events.rs  lib.rs
onchain/programs/prediction_market/src/instructions/: admin.rs  airdrop.rs  betting.rs  claims.rs  market_create.rs  mod.rs  resolve_ai.rs  resolve_pyth.rs
onchain/programs/prediction_market/src/state/: config.rs  market.rs  mod.rs  position.rs
onchain/programs/prediction_market/src/types/: enums.rs
(+127 files in other folders)
