[package]
name = "prediction_market"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["idl-build"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
anchor-debug = []  

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.31.1" } 
mpl-token-metadata = "5.1.1"
# pyth-sdk-solana = "0.10.6"
spl-token = { version = "8.0.0", default-features = false }
spl-associated-token-account = { version = "7.0.0", default-features = false, features = ["no-entrypoint"] }
pyth-solana-receiver-sdk ="1.0.1"